2005-02-03  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify/Growl.pm: add support for new images, and sticky defaults

2005-02-02  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Only notify on success if Fink has been around for a
	miniumum time period.

2005-02-02  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn if used debconf but no Depends:debconf.

2005-02-02  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Notify.pm: Fixed dmacks' breakage, plus better test for new() failure.
	* Notify.pm, Engine.pm: Add notifications for complete success, failure.

2005-02-02  Daniel Macks  <dmacks@netspace.org>

	* Notify.pm: Improved handling of failures of notifier new().
	* Notify/*.pm: test for file executability/readability, not just
	its existence.

2005-01-31  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify.pm, PkgVersion.pm, Services.pm, Notify/*.pm:
	updated to a more modular notification system, including plugins
	for growl, apple text-to-speech, quicksilver, and syslog.

2005-01-31  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VirtPackage.pm: Added Growl virtual pkg

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: No 64-bit-specific gcc* pkgs exist at this time.

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn for "Provides: foo (versiondata)"

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Implemented --recursive for fetch mode. Implemented
	--dry-run in the engine (only available with fetch --recursive so
	far). Improved pkgspec constants usage in real_install.

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Services.pm: Changed "growl" to notify.  This
	  will be replaced with something more configurable post-0.24.

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* *.pm: Updated POD validation errors.

2005-01-30  Dave Morrison  <dmrrsn@users.sourceforge.net>
